<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:gravity="center_vertical|center_horizontal"
    android:baselineAligned="false">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/signup"
        android:id="@+id/lDaftar"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/Tusername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username" />
    <EditText
        android:id="@+id/Trealname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/realname" />
    <EditText
        android:id="@+id/Temail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email" />
    <EditText
        android:id="@+id/Tpassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/Bdaftar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup" />
</LinearLayout>