<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:gravity="center_vertical|center_horizontal"
    android:baselineAligned="false">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Data Baru"
        android:id="@+id/bnewdata"
        android:layout_gravity="center_horizontal"
        android:minWidth="@dimen/abc_panel_menu_list_width" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listdata"
        android:id="@+id/blistdata"
        android:layout_gravity="center_horizontal"
        android:minWidth="@dimen/abc_panel_menu_list_width" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:id="@+id/bsetting"
        android:layout_gravity="center_horizontal"
        android:minWidth="@dimen/abc_panel_menu_list_width" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:id="@+id/blogout"
        android:layout_gravity="center_horizontal"
        android:minWidth="@dimen/abc_panel_menu_list_width" />
</LinearLayout>
